Initial plugin skeleton

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1228,6 +1228,7 @@ if(ENABLE_PLUGINS)
 	set(PLUGIN_SRC_DIRS
 		plugins/docsis
 		plugins/ethercat
+		plugins/ge_srtp
 		plugins/gryphon
 		plugins/irda
 		plugins/m2m
