--- a/configure.ac
+++ b/configure.ac
@@ -3004,6 +3004,7 @@ AC_CONFIG_FILES(
   plugins/docsis/Makefile
   plugins/easy_codec/Makefile
   plugins/ethercat/Makefile
+  plugins/ge_srtp/Makefile
   plugins/gryphon/Makefile
   plugins/irda/Makefile
   plugins/m2m/Makefile
