--- a/Makefile.am
+++ b/Makefile.am
@@ -350,6 +350,7 @@ if HAVE_PLUGINS
 plugin_ldadd = $(_CUSTOM_plugin_ldadd_) \
 	-dlopen plugins/docsis/docsis.la \
 	-dlopen plugins/ethercat/ethercat.la \
+	-dlopen plugins/ge_srtp/ge_srtp.la \
 	-dlopen plugins/gryphon/gryphon.la \
 	-dlopen plugins/irda/irda.la \
 	-dlopen plugins/m2m/m2m.la \
